samples/_failures_safe/1761702638_e92050_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95463dd6.c: In function ‘main’:
./samples/SAFE/__tmp_95463dd6.c:135:5: error: expected declaration or statement at end of input
  135 |     read_matrix(&mat1, "A");
      |     ^~~~~~~~~~~
